[package]
name = "pest_tree"
version = "0.4.3"
edition = "2021"
authors = ["Eisverygoodletter"]
repository = "https://github.com/Eisverygoodletter/pest_tree"
description = "Convert output from pest parser into statically typed trees"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
pest = "2.7.2"
pest_derive = "2.7.2"
pest_tree_derive = { path = "../pest_tree_derive", version = "0.4.3" }
ariadne = "0.3.0"