[package]
name = "pest_tree_derive"
version = "0.2.0"
edition = "2021"
authors = ["Eisverygoodletter"]
repository = "https://github.com/Eisverygoodletter/pest_tree"
description = "Derive crate for pest_tree"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version="2", features=["full", "extra-traits", "printing"] }
prettyplease = "0.2.12"
derive_builder = "0.12.0"
